# risk-platform-api

./: Cargo.toml  README.md
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/ingestion-service/: Cargo.toml
services/ingestion-service/src/: main.rs
services/regime-service/: Cargo.toml
services/regime-service/src/: handler.rs  main.rs
services/scoring-service/: Cargo.toml
services/scoring-service/src/: handler.rs  main.rs
services/shock-service/: Cargo.toml
services/shock-service/src/: mian.rs  onnx_loader.rs
services/volatility-service/: Cargo.toml
services/volatility-service/src/: main.rs  volatility.rs
shared/math/: Cargo.toml
shared/math/src/: lib.rs  scoring.rs
shared/models/: Cargo.toml
shared/types/: Cargo.toml
shared/types/src/: lib.rs
shared/utils/: Cargo.toml
shared/utils/src/: lib.rs  observability.rs
