[workspace]
members = [
    "services/regime-service",
    "services/volatility-service",
    "services/shock-service",
    "services/scoring-service",
    "services/api-gateway",
    "services/ingestion-service",
    "shared/math",
    "shared/models",
    "shared/types",
    "shared/utils"
]
resolver = "2"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

# math dependencies
ndarray = "0.15"
statrs = "0.16"
